stylesheet.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* End of CSS RESET*/

.nav-flex-container {
list-style: none;
margin: 0em 80px;
padding: 15px 0px;
display: flex;
flex-wrap: row nowrap;
justify-content: flex-end;
align-items: center;
}
.nav-item{
  font-size: 0.9em;
  list-style: none;
  margin-right: 15px;
}
.nav-item1{
  margin-right: auto;
  margin-left: 0px;
  font-size: 1.4em;
  font-weight: bold;
  color: #ff5674;
}
ul i {
  color: #ff5674;
  font-size: 2em;
  margin-right: 6px;
}
.nav-item:last-child{
  margin-right:10px ;
}

.heading-container{
margin: 0px 0px;
height: 110vh;
}
.heading-wrapper{
margin: 0px 75px;
padding: 20px 0px;
position: relative;
}
.search-wrapper{
  position: relative;
  z-index: 2;
  max-width: 420px;
  width: 100%;
  height: 522px;
  border-radius: 12px;
  background: white;
  box-shadow: 0 6px 20px rgb(0 0 0 / 20%);
  padding: 35px;
}
.search-card{
}
.search-heading h2 {
  font-weight: 650;
  line-height: 1.1em;
}
.search-heading p {
  font-size: 0.959em;
  color: rgb(109, 109, 109);
  line-height: 1.25em;
}
.boot-input h5 {
  font-size: 0.7em;
  padding: 5px 0px;
  margin-left: 9px;
}
.boot-input button {
  border-radius: 20px;
}
.row {
  position: relative;
  left: 12px;
  padding: 5px 0px;
}
.background-wrapper{
  
}
.background-card{
  position: absolute;
  top: 0px;
  right: 0px;
}
.background-card img{
  border-radius: 8px;
  max-width: 100%;
  height: 100vh;
  object-fit: cover;
}

/* Hosting Section*/
.hosting-container {
  margin: 0px 0px;
  height: 70vh;
}
.hosting-wrapper {
  position: relative;
  z-index: 2;
  margin: 0px 75px;
  padding: 0px 0px;
  height: 364px;
  
}
.hosting-card {
  position: static;
  width: 100%;
  height: 100%;
  float: left;
  color: white;
  border-radius: 15px; 
}
.hosting-text{
  position: relative;
  z-index: 9;
  width: 40%;
}
.hosting-card h2, span button{
  display: inline-block;
}
.hosting-card h2{
  position: absolute;
  top: 90px;
  left: 70px;
  font-size: 2.5em;
}
.hosting-span{
  width: 320px;
  position: absolute;
  top: 140px;
  left: 70px;
}
.hosting-button {
  position: absolute;
  top: 230px;
  left: 70px;
}
.hosting-button button {
  font-weight: 600;
  padding: 10px 23px;
  border-radius: 8px;
}
/* */
.hosting-image{
  position: static;
  height: 364px;
  max-width: 100%;
  border-radius: 12px;
  
}
.hosting-image img {
  position: static;
  z-index: 3;
  width: 100%;
  max-width: 100%;
  height: inherit;
  object-fit: cover;
  object-position: right bottom  ;
  border-radius: 12px;
}
/* Review Section*/

.review-container {
  margin: 0px 0px;
  height: 89vh;
}
.review-wrapper {
  margin: 0px 75px;
  height: 89vh;
}
.review-header {

}
.review-header p, strong {
  color: gray;
  font-size: 0.95em;
}
.review-card{
  float: left;
  width: 345px;
  height: 400px;
  margin: 0px 10px 0px 0px;
}
.review-image{
  width: inherit;
  height: 230px;
} 
.review-image img {
  width: 100%;
  border-radius: 8px;
  object-fit: cover;
}
.review-info {
  width: inherit;
  height: 100px;
}
.review-info p:first-child {
  font-size: 0.9em;
  margin-top: 8px;
}
.review-info p:last-child {
  font-size: 0.9em;
  margin-top: -10px;
  height: 75px;
  line-height: 1.25em;
  color: rgb(85, 85, 85);
}
.review-profile{
  width: inherit;
  height: 62px;
  position: relative;
}
.review-profile img {
  width: 45px;
  margin-top: 17px;
}
.review-profile h4{
  display: inline-block;
  font-size: 0.9em;
  font-weight: 650;
  position: absolute;
  top: 18px;
  left: 58px;
}
.review-profile p{
  display: inline-block;
  font-size: 0.83em;
  position: absolute;
  top: 40px;
  left: 58px;
  color: rgb(124, 124, 124);
}

.features-container{
  margin: 0px 0px;
  height: 50vh;
  }
  .features-wrapper{
  margin: 0px 75px;
  padding: 20px 0px;
  position: relative;
  height: 40vh;
  }
  
  .features-card-1{
    width: 350px;
    height: 115px;
    float: left;
    margin: 0px 7px 0px 0px;
  }
  .features-card-1 i {
    display: block;
    font-size: 1.75em;
    margin-bottom: 12px;
  }
  .features-card-1 h5, p {
    display: inline-block;
  }
  .features-card-1 p {
    font-size: 0.9em;
  }
.booked-container {
  margin: 0px 0px;
  height: 82vh;
}
.booked-wrapper {
  margin: 0px 75px;
  position: relative;
  height: 73vh;
}
.booked-wrapper h3 {
  font-size: 1.5em;
}
.booked-card {
  width: 250px;
  height: 320px;
  float: left;
  margin: 0px 7px 0px 0px;
}
.booked-card-img {
  width: 250px;
  height: 255px;
}
.booked-card-img img {
  max-width: 100%;
  height: 255px;
  object-fit: cover;
  border-radius: 15px;
}
.booked-card-content {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  height: 22px;
  position: relative;
}
.booked-card-content h5 {
  font-size: 0.85em;
  align-self: center;
}
.booked-card-content i {
  font-size: 0.7em;
  position: absolute;
  right: 28px;
  top: 6px;

}
.booked-card-content p {
  font-size: 0.9em;
}
.booked-card-info {
  height: 43px;
  display: flex;
  align-content: flex-start;
  flex-flow: column nowrap;
}
.booked-card-info p:first-child {
  display: inline-flex;
  font-size: 0.82em;
  color: rgb(110, 110, 110);
  margin-bottom: 0px;
}
.booked-card-info p:last-child, strong{
  color: black;
  display: inline-flex;
  font-size: 0.9em;
}

